_sass/_base.scss
/* ... */
// Citation

.citation,
.citation-number {
  color: var(--global-theme-color);
}

// Profile

.profile {
  width: 100%;
  position: relative;

  .address {
    margin-bottom: 5px;
    margin-top: 5px;
    font-family: monospace;

    p {
      display: inline-block;
      margin: 0;
    }
  }

  .contact-info {
    display: flex;
    margin-top: 5px;
    align-items: center;
    font-family: monospace;
    font-size: 1.125rem;

    p {
      display: inline-block;
      margin: 0;
    }
  }
  
  .description {
    margin-bottom: 0px;
    margin-top: -10px;
    font-family: monospace;
    font-size: 1.125rem;

    p {
      display: inline-block;
      margin: 0;
    }
  }
}

.contact-info a:hover::before {
  transform-origin: left;
  transform: scaleX(1);
}

.fa-envelope {
  margin-right: 5px;
}

@keyframes pulse {
  0% {
      transform: scale(1);
  }
  50% {
      transform: scale(1.2);
  }
  100% {
      transform: scale(1);
  }
}

.contact-info:hover .fa-envelope {
  animation: pulse 0.5s infinite;
  transform: scale(1.1);
}

.profile.float-right {
  margin-left: 1rem;
}

.profile.float-left {
  margin-right: 1rem;
}


@media (max-width: 800px) {
  .column1 {
    position: relative;
    width: 100%;
    max-width: 200px;
    height: auto;
    top: 0;
    left: 0;
    margin: 0 auto;
    padding-bottom: 0px;
  }

  .column2 {
    position: relative;
    width: 100%;
    margin: 20px 0;
    left: 0;
    margin-left: 0;
    margin-top: 0;
    clear: both;
  }

  /* Adjust wrapper for mobile view */
  .columns-wrapper {
    height: auto;
    overflow-y: visible;
    padding-top: 0;
  }
}

/* Ensure the social icons are fully visible */
.social {
  margin-bottom: 20px;
}

/* Add some extra space at the bottom of the profile */
.profile {
  padding-bottom: 20px;
}

.rectangle {
  position: absolute; /* Position the rectangle relative to its parent */
  top: -5px; /* Adjust as needed */
  left: 5px; /* Adjust the left offset as needed */
  width: 100%; /* Set width to 100% to match the width of the parent container */
  height: 0; /* Set height to 0 initially */
  padding-bottom: 134%; /* Use padding to set height to 150% of the width of the parent container */
  border-radius: 3px;
  background-color: $blue-color; /* Change the color as desired */
  z-index: -1; /* Set z-index to -1 to position the rectangle behind the image */
}

.post-description {
  margin-bottom: 2rem;
  font-size: 0.875rem;

  a {
    color: inherit;

    &:hover {
      color: var(--global-theme-color);
      text-decoration: none;
    }
  }
}


// Navbar customization

.navbar {
  box-shadow: none;
  border-bottom: 1px solid var(--global-divider-color);
  background-color: var(--global-bg-color);
  opacity: 0.95;
}

.navbar .dropdown-menu {
  background-color: var(--global-bg-color);
  border: 1px solid var(--global-divider-color);

  a:not(.active) {
    color: var(--global-text-color);
  }

  a:hover {
    color: var(--global-hover-color);
  }

  .dropdown-divider {
    border-top: 1px solid var(--global-divider-color) !important;
  }
}

.dropdown-item {
  color: var(--global-text-color);

  &:hover {
    color: var(--global-hover-color);
    background-color: var(--global-bg-color);
  }
}

.navbar.navbar-light {
  a {
    &:hover {
      text-decoration: none;
    }
  }

  .navbar-brand {
    color: var(--global-text-color);
  }

  .navbar-nav .nav-item .nav-link {
    color: var(--global-text-color);

    &:hover {
      color: var(--global-hover-color);
    }
  }

  .navbar-nav .nav-item.active>.nav-link {
    background-color: inherit;
    font-weight: bolder;
    color: var(--global-theme-color);

    &:hover {
      color: var(--global-hover-color);
    }
  }

  .navbar-nav .nav-item-separator {
    border-left: 1px solid var(--global-divider-color);
    margin: 0.25rem 0.25rem;
    padding: 0;
    pointer-events: none;
  }

  .navbar-brand.social {
    padding-bottom: 0;
    padding-top: 0;
    font-size: 1.7rem;

    a {
      i::before {
        color: var(--global-text-color);
        transition-property: all 0.2s ease-in-out;
      }

      &:hover {
        i::before {
          color: var(--global-theme-color);
        }
      }
    }
  }
}

.navbar-toggler {
  .icon-bar {
    display: block;
    width: 22px;
    height: 2px;
    background-color: var(--global-text-color);
    border-radius: 1px;
    margin-bottom: 4px;
    transition: all 0.2s;
  }

  .top-bar {
    transform: rotate(45deg);
    transform-origin: 10% 10%;
  }

  .middle-bar {
    opacity: 0;
  }

  .bottom-bar {
    transform: rotate(-45deg);
    transform-origin: 10% 90%;
  }
}

.navbar-toggler.collapsed {
  .top-bar {
    transform: rotate(0);
  }

  .middle-bar {
    opacity: 1;
  }

  .bottom-bar {
    transform: rotate(0);
  }
}

#light-toggle {
  padding: 0;
  border: 0;
  background-color: inherit;
  color: var(--global-text-color);

  &:hover {
    color: var(--global-hover-color);
  }
}

// Social (bottom)

.social {
  text-align: center;

  .contact-icons {
    font-size: 2rem;

    a {
      i::before {
        color: var(--global-text-color);
        transition-property: all 0.2s ease-in-out;
      }

      &:hover {
        i::before {
           color: var(--global-theme-color);
        }
      }
    }
  }

  .contact-note {
    font-size: 0.8rem;
  }
}


// Footer
footer.fixed-bottom {
  background-color: var(--global-footer-bg-color);
  font-size: 0.75rem;

  .container {
    color: var(--global-footer-text-color);
    padding-top: 9px;
    padding-bottom: 8px;
  }

  a {
    color: var(--global-footer-link-color);

    &:hover {
      color: var(--global-theme-color);
      text-decoration: none;
    }
  }
}

footer.sticky-bottom {
  border-top: 1px solid var(--global-divider-color);
  padding-top: 40px;
  padding-bottom: 40px;
  font-size: 0.9rem;
}
/* ... */

